# financial-statement-analysis

./: .gitignore  Notes.txt  README.md  pyproject.toml  yfinance_data.ipynb
